@@ -1,0 +1,4 @@
+noinst_DATA = guirevhistory.sgml
+
+include $(top_srcdir)/Makefile.rules
+
