@@ -1,4 +1,0 @@
-<!entity guicont.sgml system "guicont.sgml">
-<!entity guimeta.sgml system "guimeta.sgml">
-<!entity gui00.sgml system "gui00.sgml">
-<!entity guipages.sgml system "guipages.sgml">
