@@ -1,0 +1,4 @@
+<!entity guicont.sgml system "@srcdir@/guicont.sgml">
+<!entity guimeta.sgml system "@srcdir@/guimeta.sgml">
+<!entity gui00.sgml system "@srcdir@/gui00.sgml">
+<!entity guipages.sgml system "guipages.sgml">
